added new updated portfolio projects

--- a/Index.html
+++ b/Index.html
@@ -98,9 +98,9 @@
         <!-- Project 1 -->
         <div class="card-deck">
             <div class="card">
-                <img src="images/spotify.png" class="card-img-top port" alt="...">
+                <img src="images/openSound.png" class="card-img-top port" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Spotify</h5>
+                    <h5 class="card-title">OpenSound Project</h5>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                         Find out more
                     </button>
@@ -130,9 +130,9 @@
             </div>
             <!-- project2 -->
             <div class="card">
-                <img src="images/The-Weather-Dashboard.jpg" class="card-img-top port" alt="...">
+                <img src="images/Burger.png" class="card-img-top port" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">weather</h5>
+                    <h5 class="card-title">Eat Da Burger</h5>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">
                         Find out more
                     </button>
@@ -161,9 +161,9 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/scheduleHD.jpeg" class="card-img-top port" alt="...">
+                <img src="images/NoteTaker.png" class="card-img-top port" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Scheduler</h5>
+                    <h5 class="card-title">Note Taker</h5>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3">
                         Find out more
                     </button>
@@ -228,9 +228,9 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/The-Weather-Dashboard.jpg" class="card-img-top port" alt="...">
+                    <img src="images/Weather2.png" class="card-img-top port" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">weather</h5>
+                        <h5 class="card-title">The weather dashboard</h5>
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal5">
                             Find out more
                         </button>
