added more info to the modal

--- a/Index.html
+++ b/Index.html
@@ -117,7 +117,20 @@
                                     </button>
                                 </div>
                                 <div class="modal-body-1">
-                                    people people people people people
+                                    This application serves as an alternative to the publicly available Spotify player.
+                                    To use this application you have to signup and be a member in order for your data to
+                                    be save to the database. Once you're a member, users have the ability to:
+                                    <ul>
+                                        <li>Search for an Artist: </li>
+                                        <li>Search for a Song:</li>
+                                        <li>Search for an Album:</li>
+                                        <li>"Add" to their own personal playlist.</li>
+
+
+                                    </ul>
+                                    This app applies everything from colleting data through various api call and saving
+                                    it the databas, node commands and many other application.
+
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -149,7 +162,18 @@
                                     </button>
                                 </div>
                                 <div class="modal-body-2">
-                                    0987654321
+                                    Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd
+                                    like to eat.
+                                    <ul>
+                                        <li>Whenever a user submits a burger's name, your app will display the burger on
+                                            the left side of the page -- waiting to be devoured.</li>
+
+                                        <li>Each burger in the waiting area also has a Devour it! button. When the user
+                                            clicks it, the burger will move to the right side of the page.</li>
+
+                                        <li>Your app will store every burger in a database, whether devoured or not.
+                                        </li>
+                                    </ul>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -180,7 +204,14 @@
                                     </button>
                                 </div>
                                 <div class="modal-body-3">
-                                    12344567890
+                                    An application that can be used to write, save, and delete notes.
+                                    <p>This application will use an express backend and save and retrieve note data from
+                                        a JSON file.</p>
+                                    <p>To use the program simple run node server.js on your terminal then open your
+                                        localhost browser that is specified in the program. Once that is done you get
+                                        can started and post new notes , delete the ones you no longer need and you can
+                                        go to /api/notes on the localhost to the all the notes currentls saved in the
+                                        api..</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -215,7 +246,15 @@
                                         </button>
                                     </div>
                                     <div class="modal-body-4">
-                                        qwertyuiop
+                                        <p>THis was by far the most challenging one. In this project we created our own
+                                            local serve and linked it to our JavaScript. </p>
+                                        <p>
+                                            Once this was all done, we were able to connect to the spotify API and
+                                            make request through our server and we were successful able to get a response back
+                                            and render the content in our page. </p>
+                                        <p></p>  
+                                           <p> Some of the requests made included artist picture, preview of each song and
+                                            generated playlist that specific artis/ genre.</p>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
@@ -246,7 +285,15 @@
                                         </button>
                                     </div>
                                     <div class="modal-body-5">
-                                        asdfgh
+                                        <p>By far my favourite assignemtn so far. In this assingment I was challenged to use
+                                            everthing i  have learned.</p>
+                                            <p> I applied the use of HTML, CSS , jQuery, Moment Js , local storages,
+                                            AJAX, APIs. </p>
+                                            <p>I was able to connect and make request to the weather network API. from there I was
+                                            able to let the user search diffrent cities and be able to get a response which was rendered to the
+                                            page.</p>
+                                             <p>Each time a user searches a city, the search input was save as a buttton which would be used same
+                                            city again</p>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
@@ -259,44 +306,43 @@
                     </div>
                 </div>
 
-                    <div class="card">
-                        <img src="images/scheduleHD.jpeg" class="card-img-top port" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Scheduler</h5>
+                <div class="card">
+                    <img src="images/scheduleHD.jpeg" class="card-img-top port" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Scheduler</h5>
 
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal"
-                                data-target="#exampleModal6">
-                                Find out more
-                            </button>
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModal6" tabindex="-1" role="dialog"
-                                aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Project6</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body-6">
-                                            xcvbm wsd hewh
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal6">
+                            Find out more
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal6" tabindex="-1" role="dialog"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Project6</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body-6">
+                                        xcvbm wsd hewh
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
                                     </div>
                                 </div>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Learn more about this project</a> -->
                         </div>
+                        <!-- <a href="#" class="btn btn-primary">Learn more about this project</a> -->
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
 
