Added github links to each project

--- a/Index.html
+++ b/Index.html
@@ -133,8 +133,10 @@
 
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <a href="https://stark-woodland-75959.herokuapp.com/app" target="_blank">
+                                        <button type="button" class="btn btn-outline-success">View Webpage</button></a>
+                                    <a href="https://github.com/morenogomes/project_2" target="_blank">
+                                        <button type="button" class="btn btn-outline-warning">View Code </button></a>
                                 </div>
                             </div>
                         </div>
@@ -176,8 +178,10 @@
                                     </ul>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <a href="https://github.com/leeroyp/-burger-logger-" target="_blank">
+                                        <button type="button" class="btn btn-outline-success">View Webpage</button></a>
+                                    <a href="https://github.com/leeroyp/-burger-logger-" target="_blank">
+                                        <button type="button" class="btn btn-outline-warning">View Code </button></a>
                                 </div>
                             </div>
                         </div>
@@ -214,8 +218,10 @@
                                         api..</p>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <a href=" https://leeroyp.github.io/Assignment6LP.github.io/" target="_blank">
+                                        <button type="button" class="btn btn-outline-success">View Webpage</button></a>
+                                    <a href="https://github.com/leeroyp/Assignment6LP.github.io" target="_blank">
+                                        <button type="button" class="btn btn-outline-warning">View Code </button></a>
                                 </div>
                             </div>
                         </div>
@@ -257,9 +263,10 @@
                                             generated playlist that specific artis/ genre.</p>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                        <a href="https://github.com/leeroyp/Express-Homework-Note-Taker.github.io" target="_blank">
+                                            <button type="button" class="btn btn-outline-success">View Webpage</button></a>
+                                        <a href="https://github.com/leeroyp/Express-Homework-Note-Taker.github.io" target="_blank">
+                                            <button type="button" class="btn btn-outline-warning">View Code </button></a>
                                     </div>
                                 </div>
                             </div>
@@ -296,9 +303,10 @@
                                             city again</p>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                        <a href="https://leeroyp.github.io/Assignment6LP.github.io/" target="_blank">
+                                            <button type="button" class="btn btn-outline-success">View Webpage</button></a>
+                                        <a href="https://github.com/leeroyp/Assignment6LP.github.io" target="_blank">
+                                            <button type="button" class="btn btn-outline-warning">View Code </button></a>
                                     </div>
                                 </div>
                             </div>
@@ -307,9 +315,9 @@
                 </div>
 
                 <div class="card">
-                    <img src="images/scheduleHD.jpeg" class="card-img-top port" alt="...">
+                    <img src="images/employees.png" class="card-img-top port" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Scheduler</h5>
+                        <h5 class="card-title">Employee Tracker</h5>
 
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal6">
@@ -327,12 +335,17 @@
                                         </button>
                                     </div>
                                     <div class="modal-body-6">
-                                        xcvbm wsd hewh
+                                    <p> This application is a solution for managing a company's employees using node, inquirer, and MySQL</p>
+                                    <p>Users can add new employees, roles , and departments. </p>
+                                    <p>Once data has been inputed, users have the ability to check the data based on the selected options which can vary from view employees, veiw roles and view departments. </p>
+                                    <p>Users also have the ability to update employee info based on the the employee id.</p>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                        <a href="https://github.com/leeroyp/Employee-tracker" target="_blank">
+                                            <button type="button" class="btn btn-outline-success">View Webpage</button></a>
+                                        <a href="https://github.com/leeroyp/Employee-tracker" target="_blank">
+                                            <button type="button" class="btn btn-outline-warning">View Code </button></a>
+                                    
                                     </div>
                                 </div>
                             </div>
