updated contact info

--- a/Index.html
+++ b/Index.html
@@ -350,7 +350,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <a href="#" class="btn btn-primary">Learn more about this project</a> -->
                     </div>
                 </div>
             </div>
@@ -378,10 +377,32 @@
                 <br>
                 <i class="far fa-envelope emailinfo fontawesome"> leeroyphili@gmail.com</i>
             </div>
-
-            <!-- Send me a direct email in this form -->
+<div>
             <form>
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputEmail4">Name</label>
+                    <input type="email" class="form-control" id="inputEmail4">
+                  </div>
+                </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Email</label>
+                      <input type="email" class="form-control" id="inputEmail4">
+                    </div>
+                    </div>
+                    <div class="form-row">
+                    <div class="form-group  col-md-6 textarea">
+                        <label for="exampleFormControlTextarea1"></label>
+                        <textarea class="form-control" placeholder="Your Message" id="exampleFormControlTextarea1"
+                            rows="3"></textarea>
+                        <button type="submit" class="btn btn-secondary submit">Submit</button>
+                    </div> 
+                </div> 
+                    </form>
 
+</div>
+<!-- 
                 <div class="form-group col-md-6 name">
                     <label for="inputEmail4"></label>
                     <input type="email" placeholder="Name" class="form-control" id="inputEmail4">
@@ -399,23 +420,19 @@
                     <button type="submit" class="btn btn-secondary submit">Submit</button>
                 </div>
 
-            </form>
+            </form> -->
 
-            <!-- This button takes you back to the welcome page -->
-            <i class="fas fa-angle-double-up fa-3x straight-top"></i>
-
-            <!-- Link to my linkedin/github etc. -->
+    
             <div>
                 <i class="fab fa-linkedin social fa-3x" id="linkedin"></i>
-                <i class="fab fa-github-square social fa-3x" id="github"></i>
+                <i class="fab fa-github-square social fa-3x" id="github"  ></i>
                 <i class="fab fa-instagram-square social fa-3x" id="insta"></i>
                 <i class="fab fa-twitter-square social fa-3x" id="twitter"></i>
             </div>
         </div>
     </div>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
+   
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
