resizing contents to fit the page

--- a/Index.html
+++ b/Index.html
@@ -83,9 +83,9 @@
             </div>
 
 
-            <div class="card w-75">
+            <div class="card w-70">
                 <div class="card-body">
-                    <h5 class="card-title">Experience</h5>
+                    <h5 class="card-title Experience">Experience</h5>
                     <section id="photos">
                         <img src="css3.svg" alt="css">
                         <img src="heroku.svg" alt="heroku">
@@ -203,7 +203,7 @@
                                         </ul>
                                     </div>
                                     <div class="modal-footer">
-                                        <a href="https://github.com/leeroyp/-burger-logger-" target="_blank">
+                                        <a href="https://thawing-scrubland-31859.herokuapp.com/" target="_blank">
                                             <button type="button" class="btn btn-outline-success">View
                                                 Webpage</button></a>
                                         <a href="https://github.com/leeroyp/-burger-logger-" target="_blank">
@@ -481,8 +481,8 @@
 
 
             <div>
-                <i class="fab fa-linkedin social fa-3x" id="linkedin"></i>
-                <i class="fab fa-github-square social fa-3x" id="github"></i>
+                <a href="https://www.linkedin.com/in/leeroy-phili-0b0b5119b/" target="_blank"><i class="fab fa-linkedin social fa-3x" id="linkedin"></i></a>
+                <a href="https://github.com/leeroyp" target="_blank"><i class="fab fa-github-square social fa-3x" id="github"></i></a>
                 <i class="fab fa-instagram-square social fa-3x" id="insta"></i>
                 <i class="fab fa-twitter-square social fa-3x" id="twitter"></i>
             </div>
