added social media contacts

--- a/Index.html
+++ b/Index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="wrapper">
-            <a href="Leeroy Phili  Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-success resume"
+            <a href="images/Leeroy Phili  Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-success resume"
                     id="button ">Resume</button></a>
         </div>
 
@@ -87,17 +87,17 @@
                 <div class="card-body">
                     <h5 class="card-title Experience">Experience</h5>
                     <section id="photos">
-                        <img src="css3.svg" alt="css">
-                        <img src="heroku.svg" alt="heroku">
-                        <img src="jquery-vertical.svg" alt="jquery">
-                        <img src="js.svg" alt="js">
-                        <img src="momentjs.svg" alt="momentJs">
-                        <img src="mongodb.svg" alt="mongodb">
-                        <img src="nodejs-icon.svg" alt="node">
-                        <img src="react.svg" alt="react">
-                        <img src="html.svg" alt="html">
-                        <img src="github.png" alt="github">
-                        <img src="mysql.svg" alt="mysql">
+                        <img src="images/css3.svg" alt="css">
+                        <img src="images/heroku.svg" alt="heroku">
+                        <img src="images/jquery-vertical.svg" alt="jquery">
+                        <img src="images/js.svg" alt="js">
+                        <img src="images/momentjs.svg" alt="momentJs">
+                        <img src="images/mongodb.svg" alt="mongodb">
+                        <img src="images/nodejs-icon.svg" alt="node">
+                        <img src="images/react.svg" alt="react">
+                        <img src="images/html.svg" alt="html">
+                        <img src="images/github.png" alt="github">
+                        <img src="images/mysql.svg" alt="mysql">
                     </section>
                 </div>
             </div>
@@ -480,11 +480,10 @@
             </form> -->
 
 
-            <div>
+            <div class="contacts">
                 <a href="https://www.linkedin.com/in/leeroy-phili-0b0b5119b/" target="_blank"><i class="fab fa-linkedin social fa-3x" id="linkedin"></i></a>
                 <a href="https://github.com/leeroyp" target="_blank"><i class="fab fa-github-square social fa-3x" id="github"></i></a>
-                <i class="fab fa-instagram-square social fa-3x" id="insta"></i>
-                <i class="fab fa-twitter-square social fa-3x" id="twitter"></i>
+                <a href="" target="_blank" target="_blank"><i class="fab fa-twitter-square social fa-3x" id="twitter"></i></a>
             </div>
         </div>
     </div>
