--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="styles.css">
-
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/6358f34dbd.js" crossorigin="anonymous"></script>
@@ -83,7 +81,7 @@
             </div>
 
 
-            <div class="card w-70">
+            <div class="card w-70 responsive">
                 <div class="card-body">
                     <h5 class="card-title Experience">Experience</h5>
                     <section id="photos">
